Package: startup
================

Version: 0.5.0-9000 [2017-04-30]

SIGNIFICANT CHANGES:

 o Package requires R (>= 2.13.0; April 2011) - was R (>= 2.12.0; Oct 2010).

NEW FEATURES:

 o startup::install() now injects 'try(startup::startup())' such that 
   install.packages("startup") will work even when 'startup' is not installed,
   e.g. after a major-version R update.

 o startup::install() and startup::uninstall() now returns the R startup file
   modified. They also produce a warning if startup is already installed or
   uninstalled, respectively.

 o startup::install() gained argument 'overwrite' to control whether to append
   (default) to a pre-existing R startup file or to overwrite it.

 o ROBUSTNESS: Backups now not only assert that the backup files are created,
   but also that they have the same file size as the original file.


Version: 0.5.0 [2017-02-12]

NEW FEATURES:

 o Startup directory or file names that start with two or more periods
   are now excluded, e.g. ~/.Rprofile.d/..hide/test.R.

 o startup() protects against attempts to update R packages also via
   pacman::p_up() in addition to utils::update.packages().

 o Added flag 'ess' to sysinfo() indicating whether R runs under Emacs
   Speaks Statistics (ESS) or not.

 o startup(debug = TRUE) detects if R_TESTS is set and reports which the
   file is and that the base package has already processed it.

BUG FIXES:

 o Now startup() ignores macOS files named .DS_Store and directories named
   __MACOSX (and their content).  Previously, such files could result
   in startup errors.
 

Version: 0.4.0 [2016-12-20]

NEW FEATURES:

 o Now it is possible to do negated filename specifications, e.g.
   hpc,package=future/os!=windows.
   
 o Filename flags can now be specified a TRUE, FALSE, T, F, 1, and 0
   (non-case sensitive), e.g. interactive=false and interactive=0.
   
 o Added element 'gui' to sysinfo().
 
 o Added flags 'rstudio' and 'wine' to sysinfo() indicating whether