@@ -9,6 +9,12 @@ SIGNIFICANT CHANGES:
 
 NEW FEATURES:
 
+ o New conditional <key>=<value> specification: an unknown '<key>' (i.e. one
+   that is not one of the known sysinfo() fields or 'package') will be
+   interpreted as the name of an environment variable.  For instance, files
+   path/LANGUAGE=en/*.R will only be included if system environment variable
+   LANGUAGE is set and equals 'en'.
+
  o startup::install() now injects 'try(startup::startup())' such that 
    install.packages("startup") will work even when 'startup' is not installed,
    e.g. after a major-version R update.
